# lego-brickbase

./: .gitignore  CHANGELOG.md  README.md  domain_model.drawio
.github/: PULL_REQUEST_TEMPLATE.md
agent/: README.md  pyproject.toml
agent/app/: __init__.py  agents.py  api.py  config.py  db.py  models.py  tools.py  ui.py
agent/lego_brickbase_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
agent/tests/: test_tools.py
databricks/bronze/: load_colors.ipynb  load_inventories.ipynb  load_inventory_minifigs.ipynb  load_inventory_parts.ipynb  load_inventory_sets.ipynb  load_minifigs.ipynb  load_part_categories.ipynb  load_parts.ipynb  load_sets.ipynb  load_themes.ipynb
databricks/gold/: dim_color.ipynb  dim_part.ipynb  dim_set.ipynb  dim_theme_hierarchy.ipynb  fct_color_usage.ipynb  fct_part_usage.ipynb  fct_set_composition.ipynb  fct_set_inventory.ipynb  fct_set_minifigs.ipynb  fct_theme_summary.ipynb
databricks/ingestion/: Load Colors.ipynb  Load Inventories.ipynb  Load Inventory Minifigs.ipynb  Load Inventory Parts.ipynb  Load Inventory Sets.ipynb  Load Minifigs.ipynb  Load Part Categories.ipynb  Load Parts.ipynb  Load Sets.ipynb  Load Themes.ipynb  load_part_categories.ipynb
databricks/silver/: foundation_colors.ipynb  foundation_inventories.ipynb  foundation_inventory_minifigs.ipynb  foundation_inventory_parts.ipynb  foundation_inventory_sets.ipynb  foundation_minifigs.ipynb  foundation_part_categories.ipynb  foundation_parts.ipynb  foundation_sets.ipynb  (+1 more)
docs/: conceptual_model.drawio
notebooks/: load_colors.ipynb  load_themes.ipynb
(+16 files in other folders)
